--- a/tailieu.html
+++ b/tailieu.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <style>
-    :root { --main: #185adb; --bg1: #f4f9ff; }
+    :root { --main: #185adb; --bg1: #eaf3ff; }
 
     html, body {
       height: 100%;
@@ -15,10 +15,18 @@
     body {
       min-height: 100vh;
       font-family: 'Montserrat', Arial, sans-serif;
-      background: var(--bg1);
+      /* Gradient nền xanh nhạt -> xanh đậm */
+      background: linear-gradient(120deg, #eaf3ff 0%, #a0bfff 100%);
       display: flex; flex-direction: column;
       position: relative;
       overflow-x: hidden;
+    }
+    /* Thêm 1 lớp overlay mờ nhẹ (nếu thích) */
+    #bg-overlay {
+      position: fixed; left:0; top:0; width:100vw; height:100vh;
+      pointer-events: none; z-index: 1;
+      background: radial-gradient(circle at 60% 30%, #ffffff50 0%, #f0f6ff00 80%);
+      opacity: 0.66;
     }
     main {
       flex: 1 0 auto;
@@ -37,7 +45,6 @@
       pointer-events: none;
     }
 
-    /* Hiệu ứng tròn sáng theo chuột */
     #mouse-light {
       position: fixed;
       top: 0; left: 0;
@@ -45,7 +52,7 @@
       margin-left: -60px; margin-top: -60px;
       pointer-events: none;
       border-radius: 50%;
-      background: radial-gradient(circle, #88c9ff55 0%, #fff0 80%);
+      background: radial-gradient(circle, #99cbff77 0%, #fff0 80%);
       mix-blend-mode: lighten;
       z-index: 10;
       transition: background 0.22s;
@@ -71,10 +78,10 @@
 
     .doc-main {
       position: relative;
-      z-index: 1;
+      z-index: 2;
       max-width: 430px;
       margin: 80px auto 60px auto;
-      background: rgba(255,255,255,0.93);
+      background: rgba(255,255,255,0.97);
       border-radius: 26px;
       box-shadow: 0 6px 32px 0 #185adb1c, 0 1px 4px #185adb09;
       padding: 38px 28px 34px 28px;
@@ -93,7 +100,6 @@
       animation: fadein 1.1s cubic-bezier(.43,.94,.71,1.36);
     }
     @keyframes fadein {from{opacity:0;transform:translateY(24px);}to{opacity:1;transform:none;}}
-
     .doc-btn-group {
       display: flex; flex-direction: column; gap: 28px; width: 100%; margin-top: 8px;
     }
@@ -167,11 +173,10 @@
   </style>
 </head>
 <body>
-  <!-- Hiệu ứng nền động -->
+  <!-- Nền hiệu ứng động -->
   <canvas id="star-canvas"></canvas>
-  <!-- Hiệu ứng sáng theo chuột -->
+  <div id="bg-overlay"></div>
   <div id="mouse-light"></div>
-  <!-- Header mini -->
   <header class="mini-header">
     <button class="home-btn" onclick="window.location.href='index.html'" title="Trang chủ">
       <img src="logo.png" alt="Trang chủ">
@@ -197,7 +202,7 @@
   </main>
   <footer id="footer"></footer>
   <script>
-    // Hiệu ứng nền sao rơi
+    // Hiệu ứng nền sao rơi màu trắng-xanh nhạt
     const canvas = document.getElementById('star-canvas');
     const ctx = canvas.getContext('2d');
     let stars = [];
@@ -208,17 +213,23 @@
       h = window.innerHeight;
       canvas.width = w;
       canvas.height = h;
+      createStars(w > 700 ? 120 : 50);
     }
     window.addEventListener('resize', resize);
-    resize();
 
     function randomStar() {
+      const pastel = [
+        'rgba(255,255,255,0.84)',
+        'rgba(160,191,255,0.89)',
+        'rgba(199,227,255,0.67)',
+        'rgba(136,201,255,0.8)'
+      ];
       return {
         x: Math.random() * w,
         y: Math.random() * h,
-        r: Math.random() * 1.2 + 0.4,
-        s: Math.random() * 0.8 + 0.1,
-        o: Math.random() * 0.55 + 0.3
+        r: Math.random() * 1.5 + 0.6,
+        s: Math.random() * 0.7 + 0.15,
+        o: pastel[Math.floor(Math.random() * pastel.length)]
       }
     }
 
@@ -233,13 +244,13 @@
       for(let s of stars) {
         ctx.beginPath();
         ctx.arc(s.x, s.y, s.r, 0, 2 * Math.PI);
-        ctx.fillStyle = `rgba(24,90,219,${s.o})`;
-        ctx.shadowBlur = 10;
-        ctx.shadowColor = "#b7d6ff";
+        ctx.fillStyle = s.o;
+        ctx.shadowBlur = 15;
+        ctx.shadowColor = "#e0edff";
         ctx.fill();
         ctx.closePath();
-        s.x += s.s * 0.8;
-        s.y += s.s * 0.38;
+        s.x += s.s * 0.5;
+        s.y += s.s * 0.25;
         if (s.x > w || s.y > h) {
           Object.assign(s, randomStar());
           if (Math.random() > 0.5) s.x = 0;
@@ -256,6 +267,7 @@
     document.addEventListener('mousemove', (e) => {
       mouseLight.style.left = e.clientX + 'px';
       mouseLight.style.top = e.clientY + 'px';
+      mouseLight.style.opacity = 1;
     });
     document.addEventListener('mouseleave', () => {
       mouseLight.style.opacity = 0;
