--- a/mindmap.html
+++ b/mindmap.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <div id="header"></div>
     <script>
-      fetch('header.html').then(res => res.text()).then(data => document.getElementById('header').innerHTML = data);
+      fetch('mini-header.html').then(res => res.text()).then(data => document.getElementById('header').innerHTML = data);
     </script>
 
     <!-- Content -->
